Fixed toggleVisibility functionality and updated main.scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,11 @@
+
+$mainColor: green;
+$mainColorDark: darkgreen;
+$mainColorLight: lightGreen;
+
 html, body {
+    background-color: black;
+    color: white;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -17,7 +24,7 @@ html, body {
 nav {
     width: 100%;
     height: 50px;
-    background-color: darkgreen;
+    background-color: $mainColorDark;
 }
 
 nav:nth-child(1) {
@@ -38,21 +45,21 @@ nav:nth-child(1) {
     text-decoration: none;
     padding: 5px;
     border-radius: 4px;
-    background-color: green;
+    background-color: $mainColor;
     transition: background-color 0.4s ease;
 }
 
 .navlink a:hover {
     transition: background-color 0.8s ease;
-    background-color: lightgreen;
+    background-color: $mainColorLight;
 }
 
 .mainForm {
-    height: 300px;
-    width: 350px;
-    margin: 0 auto;
-    padding-top: 350px;
+    width: 450px;
+    margin: 20 auto;
+    padding: 30px;
     font-size: 1.2em;
+    background-color: slategray;
 
     h3 {
         text-align: center;
@@ -60,7 +67,7 @@ nav:nth-child(1) {
 
     label {
         display: inline-block;
-        width: 100px;
+        width: 200px;
         margin-right: 10px;
         text-align: right;
         font-size: 1.2em;
@@ -68,16 +75,16 @@ nav:nth-child(1) {
 }
 
 .formSubmit {
-    transition: background-color 0.4s ease;
+    transition: 0.4s ease;
     display: block;
     text-align: center;
     margin: 0 auto;
     margin-top: 14px;
     font-size: 1.2em;
     width: 100px;
-    background-color: #55acee;
+    background-color: $mainColor;
     border-radius: 2px;
-    border-color: #66acee;
+    border-color: $mainColor;
     padding: 3px 0px;
     color: white;
     text-decoration: none;
@@ -88,7 +95,7 @@ nav:nth-child(1) {
 
     :hover {
         transition: background-color 0.4s ease;
-        background-color: #338acc;
+        background-color: $mainColorLight;
     }
 }
 
@@ -142,14 +149,15 @@ nav:nth-child(1) {
     width: 100%;
     min-width: 400px;
     margin: 0 auto;
-    border: 2px solid #338acc;
+    border: 2px solid $mainColor;
     height: 80px;
     width: 700px;
-    margin-top:0px;
+    margin-top:20px;
     padding-top:10px;
-    background-color: #55acee;
+    background-color: $mainColorDark;
     border-bottom-right-radius: 4px;
     border-top-right-radius: 4px;
+    color: white;
 
     input[type=text] {
         float:left;
@@ -165,10 +173,10 @@ nav:nth-child(1) {
 }
 
 .makeMediaSubmit {
-    transition: background-color 0.4s ease;
+    transition: 0.4s ease;
     display: inline;
     width: 90px;
-    background-color: #55acee;
+    background-color: $mainColor;
     border-radius: 2px;
     color: white;
     text-decoration: none;
@@ -179,17 +187,20 @@ nav:nth-child(1) {
 
     :hover {
         transition: background-color 0.4s ease;
-        background-color: #338acc;
+        background-color: $mainColorLight;
     }
 }
 
-#media {
+#media, #explore {
     width: 80%;
     min-width: 400px;
-    border: 2px solid #55acee;
+    text-align: center;
+    border: 2px solid $mainColor;
     border-radius: 4px;
+    background-color: darkslategray;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 40px;
+    padding: 10px;
 
     img{
         max-width: 100%;
@@ -199,21 +210,28 @@ nav:nth-child(1) {
 
 .media {
     width: 95%;
-    margin: 0 auto;
-    margin-top: 2px;
-    margin-bottom: 2px;
-    border: 2px solid #55acee;
+    margin: 20px auto;
+    border: 2px solid $mainColorDark;
     border-radius: 4px;
-    background-color: #55acee;
+    background-color: gray;
     padding: 10px;
     min-height:60px;
     overflow: hidden;
+    text-align: left;
 
     :hover {
         transition: border-color 0.2s ease-out;
         border-color: rgba(255,255,255, 0.8);
         transition: background-color 2.6s ease-out;
         background-color: #66bfff;
+    }
+
+    :first-child {
+        margin-top: 10px;
+    }
+
+    :last-child {
+        margin-bottom:10px;
     }
 }
 
@@ -231,12 +249,4 @@ h3.mediaName {
     font-weight: bold;
     padding-left: 65px;
     font-size: 1.5em;
-}
-
-.media:first-child {
-    margin-top: 10px;
-}
-
-.media:last-child {
-    margin-bottom:10px;
 }
